<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".codigo.formularios.FormularioTarea">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTareaTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/averta"
                android:text="@string/tarea"

                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputNombreTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/redondeo"
                android:fontFamily="@font/roboto_r"

                android:hint="@string/nombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTareaTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEditNombreTarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    tools:ignore="VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerCategorias"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputNombreTarea" />

            <Spinner
                android:id="@+id/spinnerEstados"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCategorias" />

            <RelativeLayout
                android:id="@+id/relativeLayoutElegirHorario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayoutButtonElegirHorario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="UselessParent">

                    <Button
                        android:id="@+id/buttonElegirFechaInicioTarea"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/elegir_fecha_inicio"
                        tools:ignore="VisualLintButtonSize" />

                    <Button
                        android:id="@+id/buttonElegirFechaFinTarea"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/elegir_fecha_fin"
                        tools:ignore="VisualLintButtonSize" />

                </LinearLayout>


            </RelativeLayout>


            <Button
                android:id="@+id/buttonEnviarFormularioTarea"
                android:layout_width="131dp"
                android:layout_height="49dp"
                android:layout_margin="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="236dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/averta"
                android:textColor="@color/black"
                app:cornerRadius="10dp"
                android:backgroundTint="#FFC107 "                android:text="@string/enviar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayoutElegirHorario" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</ScrollView>